# Orbitals

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.txt
shaders/: orbitals copy 2.frag  orbitals.frag  orbitals_current_template.frag  orbitals_end.frag  orbitals_out.frag  orbitals_start.frag  orbitals_template.frag  orbitals_time_template.frag
src/: Icon.cpp  Icon.hpp  OpenGL.hpp  ShaderGen.hpp  main.cpp
